@@ -105,6 +105,7 @@ Please note that our support for the checkout block is still experimental and th
 * Fix - Fixed missing file error for removed CSS file.
 * Add - Currency deletion confirmation modal for currencies that are bound to an UPE method.
 * Fix - Currency switcher does not affect order confirmation screen prices.
+* Fix - Error when attempting to change the payment method for a subscription with UPE enabled.
 
 = 3.0.0 - 2021-09-16 =
 * Add - Download deposits report in CSV.
